--- a/listings.html
+++ b/listings.html
@@ -590,14 +590,14 @@ aside.filters:hover {
         </a>
 
         <nav class="topnav" role="navigation" aria-label="Main">
-          <a href="#">About</a>
+          <a href="/IndiaWeddingPlanner/#about">About</a>
           <a href="#">Venues</a>
           <!-- <a href="#">Services</a> -->
            <a href="#">Cities</a>
           <!-- <a href="#">Destinations</a> -->
-           <a href="#">Global</a>
+           <a href="/IndiaWeddingPlanner/#global">Global</a>
           <!-- <a href="#">Featured</a> -->
-           <a href="#">Gallary</a>
+           <a href="/IndiaWeddingPlanner/gallery.html">Gallary</a>
           <!-- <a href="#">Contact</a> -->
         </nav>
 
