--- a/venue-detail.html
+++ b/venue-detail.html
@@ -38,9 +38,9 @@
       color: #fff;
     }
     .venue-header::before {
-      content: '';
+      /* content: '';
       position: absolute;
-      inset: 0;
+      inset: 0; */
       /* background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.6)); */
     }
     .venue-header .container {
