--- a/cities.html
+++ b/cities.html
@@ -66,11 +66,11 @@
         <ul class="navbar-nav mx-auto align-items-lg-center gap-lg-3">
 
           <li class="nav-item">
-            <a class="nav-link" href="/IndiaWeddingPlanner/#about">About</a>
+            <a class="nav-link" href="index.html#about">About</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="/IndiaWeddingPlanner/venues.html">Venues</a>
+            <a class="nav-link" href="venues.html">Venues</a>
           </li>
 
           <li class="nav-item nav-links dropdown-mega ">
@@ -162,11 +162,11 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="/IndiaWeddingPlanner/#global">Global</a>
+            <a class="nav-link" href="index.html#global">Global</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="/IndiaWeddingPlanner/galleries.html">Gallery</a>
+            <a class="nav-link" href="galleries.html">Gallery</a>
           </li>
 
 
