--- a/venues.html
+++ b/venues.html
@@ -70,7 +70,7 @@
         <ul class="navbar-nav mx-auto align-items-lg-center gap-lg-3">
 
           <li class="nav-item">
-            <a class="nav-link" href="/IndiaWeddingPlanner/#about">About</a>
+            <a class="nav-link" href="#about">About</a>
           </li>
 
           <li class="nav-item">
@@ -166,11 +166,11 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="/IndiaWeddingPlanner/#global">Global</a>
+            <a class="nav-link" href="index.html#global">Global</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="/IndiaWeddingPlanner/galleries.html">Gallery</a>
+            <a class="nav-link" href="galleries.html">Gallery</a>
           </li>
 
 
